[lworld] ClassInitializationFailuresTest triggers assert with -XX:-UseTLAB

XMLWordPrintable

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/oracle/valhalla/open/src/hotspot/share/interpreter/interpreterRuntime.cpp:405), pid=338539, tid=338559
      # assert(field_vklass->is_initialized()) failed: Must be initialized at this point

      Stack: [0x00007fb80a030000,0x00007fb80a131000], sp=0x00007fb80a12ef10, free space=1019k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xeef8b8] InterpreterRuntime::read_inlined_field(JavaThread*, oopDesc*, int, Klass*)+0x278
      j runtime.valhalla.inlinetypes.ClassInitializationFailuresTest.testEscapedValueInObject()V+36
      j runtime.valhalla.inlinetypes.ClassInitializationFailuresTest.main([Ljava/lang/String;)V+9
      v ~StubRoutines::call_stub
      V [libjvm.so+0xf0a243] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x4d3
      V [libjvm.so+0x1750beb] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, JavaThread*) [clone .constprop.0]+0xd6b
      V [libjvm.so+0x17520e5] Reflection::invoke_method(oop, Handle, objArrayHandle, JavaThread*)+0x255
      V [libjvm.so+0x1097efc] JVM_InvokeMethod+0x24c
      j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base
      j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+133 java.base
      j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base
      j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base
      j com.sun.javatest.regtest.agent.MainWrapper$MainThread.run()V+172
      j java.lang.Thread.run()V+11 java.base
      v ~StubRoutines::call_stub
      V [libjvm.so+0xf0a243] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, JavaThread*)+0x4d3
      V [libjvm.so+0xf0b064] JavaCalls::call_virtual(JavaValue*, Klass*, Symbol*, Symbol*, JavaCallArguments*, JavaThread*)+0x4b4
      V [libjvm.so+0xf0b4b7] JavaCalls::call_virtual(JavaValue*, Handle, Klass*, Symbol*, Symbol*, JavaThread*)+0x77
      V [libjvm.so+0x1083ebb] thread_entry(JavaThread*, JavaThread*)+0x12b
      V [libjvm.so+0x1977ecc] JavaThread::thread_main_inner()+0x27c
      V [libjvm.so+0x197e480] Thread::call_run()+0x100

            Assignee:
            Frederic Parain
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: