8275606: [lworld] ClassInitializationFailuresTest triggers assert with -XX:-UseTLAB

Reviewed-by: dsimms